--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -4,11 +4,9 @@
   height: 12.5rem;
 
   &-front {
-    // height: 18.375rem;
     position: relative;
     height: 24rem;
 
-    // position: absolute;
     border-top-left-radius: 1.25rem;
     border-top-right-radius: 1.25rem;
 
@@ -59,7 +57,6 @@ article h1,
   padding: 2rem 0;
   
   header & {
-    //font: var(--font-weight-bold) 3.75rem/1.5em var(--font-poppins);
     width: auto;
     color: hsl(var(--color-neutral-gray-100));
     text-shadow: 0 0.3125rem 0.9375rem hsla(0, 0%, 0%, 0.3);
@@ -116,29 +113,12 @@ article h1,
   }
 }
 
-// midlertidig
 .hero-container {
-  // outline: 5px solid greenyellow !important;
-  // top: 50%;
-  // width: inherit;
-  // box-sizing: border-box;
-  // padding-left: 0;
-  // position: absolute;
-  // z-index: 3;
-  // top: 3.5rem;
-  // height: 18.375rem;
-
-  @media (min-width: 992px) {
-    // max-width: 50rem;
-    // top: 30%; 
-    // height: 45rem;
-  }
-
   h1 {
     font: var(--font-weight-bold) 1.75rem/1.5em var(--font-poppins);
-    // margin: 0;
     width: 15rem;
     color: hsl(var(--color-neutral-gray-100));
+    opacity: 1;
     text-shadow: 0 0.3125rem 0.9375rem rgba(0, 0, 0, 0.3);
     margin-top: 5.2rem;
 
@@ -150,7 +130,6 @@ article h1,
     @media (min-width: 768px) {
       width: auto;
       font: var(--font-weight-bold) 3rem/1.2em var(--font-poppins);
-      // margin-top: 1.2em;
     }
   
     @media (min-width: 992px) {
@@ -173,16 +152,6 @@ article h1,
   }
 }
 
-// .front-buttons {
-//   margin-top: -2rem;
-//   margin-bottom: 2rem;
-//   //padding: 0 1.5rem;
-
-//   @media (min-width: 992px) {
-//     margin-top: -4em;
-//   }
-// }
-
 .callback {
   display: none;
 }
@@ -193,7 +162,6 @@ article h1,
   height: 4rem;
   border-top-left-radius: 1.25rem;
   border-top-right-radius: 1.25rem;
-  // padding: 0;
   @media (min-width: 992px) {
     padding: .5rem 1rem;
     padding-left: 3rem;
@@ -210,27 +178,3 @@ article h1,
   font: normal normal var(--font-weight-semibold) 0.875rem/1.125rem var(--font-poppins);
   color: hsla(225, 43%, 5%, 1);
 }
-
-// @media (max-width: 991.98px) {
-//   // error hvis disse fjernes?
-//   .ukm-bolge {
-//     position: relative;
-//     height: 12.5rem;
-
-//     &-front {
-//       height: 18.375rem;
-//     }
-//   }
-// }
-
-// @media (min-width: 992px) {
-//   .ukm-bolge {
-//     // error hvis disse fjernes?
-//     position: relative;
-//     height: 12.5rem;
-
-//     &-front {
-//       height: 45rem;
-//     }
-//   }
-// }
