--- a/scss/components/_news.scss
+++ b/scss/components/_news.scss
@@ -26,7 +26,7 @@
     .message-content-end {
         display: block;
         color: hsl(var(--color-neutral-coldgray-700));
-        font: normal normal normal 11px/15px Roboto;
+        font: normal normal normal .6875rem/.9375rem Roboto;
         letter-spacing: 0px;
         max-width: 100%;
         width: 100%;
@@ -38,12 +38,15 @@
         display: block;
         color: hsl(var(--color-pink)); 
         text-transform: uppercase; 
-        font: normal normal bold 14px/15px Roboto;
+        font: normal normal bold .875rem/.9375rem Roboto;
         width: 100%;
+        padding-right: 3rem;
+        padding-bottom: .3rem;
+        padding-top: .3rem;
     }
 
     .message-title-end {
-        font: normal normal 600 24px/30px Poppins;
+        font: normal normal 600 1.5rem/1.875rem Poppins;
         display: block;
         margin-bottom: .5rem;
         margin-top: .5rem;
@@ -54,7 +57,7 @@
     .message-content-end {
         display: block;
         color: hsl(var(--color-neutral-coldgray-700));
-        font: normal normal normal 18px/27px Roboto;
+        font: normal normal normal 1.125rem/1.6875rem Roboto;
         max-width: 100%;
         width: 100%;
     }
