--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -38,12 +38,11 @@
   }
 
   &-long {
-    // width: 100%;
-    width: 20.4375rem;
+    width: -webkit-fill-available;
   }
 
   span {
-    background: (var(--white));
+    background:hsl(220,100%,98.8%);
     padding: 0 10px;
   }
 }
@@ -119,43 +118,23 @@
 .ukm-logo-footer {
   @media (min-width: 992px) {
     width: 76rem;
-    // margin-left: 11.5rem;
-    // margin-right: 13rem;
   }
 }
 
 .locationBreadcrum {
-  // width: 21.5625rem;
   width: -webkit-fill-available;
-  background: white;
+  background: rgba(255, 255, 255, 0.6);;
   border-radius: 0.625rem;
   box-shadow: 0rem 0.3125rem 0.9375rem hsla(var(--color-primary-blue-600), 0.11);
-
-  // position: relative;
-
-  // &::after {
-  //   content: "";
-  //   position: absolute;
-  //   // z-index: -1;
-  //   top: 0;
-  //   left: 0;
-  //   width: 100%;
-  //   height: 100%;
-  //   box-shadow: inset 0 0 0 1000px hsla(var(--color-primary-blue-100),0.24);
-  //   border: none;
-  //   margin: 0;
-  // }
 
   @media (min-width: 768px) {
     padding: 0 1rem;
   }
   
   @media (min-width: 992px) {
-    // width: 35.25rem;
     width: auto;
     height: 5rem;
-    background: hsla(0, 0%, 100%, 1) 0% 0% no-repeat padding-box;
-    // margin-left: 12rem;
+    background: rgba(255, 255, 255, 0.5);;
     border-radius: 0;
     padding: .5rem 1rem;
   }
@@ -253,7 +232,6 @@
   &::after {
     content: "";
     position: absolute;
-    // z-index: -1;
     top: 0;
     left: 0;
     width: 100%;
